--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -8,12 +8,16 @@
     justify-content: space-between;
     background-color: #111;
 }
+
 .logo{
-    position:fixed;
-    left: 20px;
-    width:80px;
+position: fixed;
+left: 20px;
+width: 80px;
 }
-.b1{
+
+.avatar{
     position: fixed;
     right: 20px;
+    width: 30px;
+
 }
